test/deca/context/valid/division_reelle_entiere.deca
{
    float x = 2.0f / 3;    
    float y = 3 / 2.0f;

}