test/deca/context/invalid/3_8_field_init2.deca
// Description:
//    field intialization false
//
// Resultats:
//    Ligne

class A {
    a = 2.1;
}
